<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_first_fragment"
                android:title="@string/first"
                android:checked="true"/>
            <item
                android:id="@+id/nav_second_fragment"
                android:title="@string/secound" />
            <item
                android:id="@+id/nav_third_fragment"
                android:title="@string/third" />
            <item
                android:id="@+id/nav_fourth_fragment"
                android:title="@string/fourth" />
            <item
                android:id="@+id/nav_fifth_fragment"
                android:title="@string/fifth" />
        </group>
    </menu>
